# dual-agent-project-initializer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  MANIFEST.in  Makefile  README.md  README.zh-CN.md  init-agent-project.ps1  init-agent-project.py  init-agent-project.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_template_request.yml  workflow_discussion.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RELEASE.md
scripts/: compile_release.py
src/dual_agent_initializer/: cli.py
src/dual_agent_initializer/templates/: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
src/dual_agent_initializer/templates/.claude/: settings.json
src/dual_agent_initializer/templates/.claude/hooks/: progress-gate.sh
src/dual_agent_initializer/templates/.codex/: config.toml
src/dual_agent_initializer/templates/_git/hooks/: pre-commit
src/dual_agent_initializer/templates/docs/agent/: 00_PRODUCT_VISION.md  01_CURRENT_STATUS.md  02_LOCKED_REQUIREMENTS.md  03_ROADMAP.md  04_TASK_HANDOFF.md  05_PROGRESS.md  06_DECISION_LOG.md  07_RECOVERY_PROTOCOL.md  08_IMPLEMENTATION_BRIEF.md  09_CODING_HANDOFF.md  (+4 more)
src/dual_agent_initializer/templates/scripts/: agent-status.ps1  agent-status.sh  agent_status.py  check-progress-docs.ps1  check-progress-docs.sh  check_progress_docs.py  git-finalize-check.ps1  git-finalize-check.sh  git_finalize_check.py
src/dual_agent_project_initializer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_initializer.py
(+8 files in other folders)
