[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-agent-project-initializer"
version = "0.2.0"
description = "A cross-platform initializer for a dual AI coding-agent workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dual Agent Project Initializer Contributors" }]
keywords = ["ai", "coding-agent", "codex", "claude-code", "workflow", "scaffold"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
init-agent-project = "dual_agent_initializer.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dual_agent_initializer = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
